<!--
  ~ Copyright (c) 2024.
  ~ MyCity © 2024 by Pelayo Reguera García is licensed under
  ~ Attribution-NonCommercial-NoDerivatives 4.0 International.
  ~
  ~ To view a copy of this license, visit http://creativecommons.org/licenses/by-nc-nd/4.0/
  -->

<resources>
    <string name="app_name">MyCity</string>
    <string name="title_activity_main" translatable="false">MyCity</string>
    <string name="nav_explore">Explorar</string>
    <string name="nav_map">Mapa</string>
    <string name="nav_profile">Perfil</string>
    <string name="card_default_contentDescription">Imagen portada de tarjeta del evento</string>
    <string name="img_event_description">Imagen representativa del evento</string>
    <string name="img_profile_description">Foto de perfil del usuario</string>
    <string name="img_coin_description">Imagen de la moneda MyCity</string>
    <string name="txtPoints">Puntos</string>
    <string name="txtUsername" translatable="false">\@anonymous</string>
    <string name="title_activity_scrolling" translatable="false">ScrollingActivity</string>
    <string name="txteDescription">Descripción*</string>
    <string name="large_text" translatable="false">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="fabEventInfo">Botón para registrarse en el evento</string>
    <string name="tabiInfo">INFO</string>
    <string name="tabiChallenge">RETOS</string>
    <string name="nav_event">Evento</string>
    <!-- TODO: Remove or change this placeholder text -->
    <!--    Context-dependent text-->
    <string name="nav_event_creation">Crear evento</string>
    <string name="event_form_txteEventName">Nombre del evento*</string>
    <string name="event_form_txteEventLocation">Ubicación*</string>
    <string name="event_form_txteEventStartDate">Inicio*</string>
    <string name="event_form_txteEventEndDate">Fin*</string>
    <string name="event_form_txtEventChallenges">Retos</string>
    <string name="event_form_fabEventCreate">¡Listo!</string>
    <string name="challenge_form_txteChallengeReward">Premio*</string>
    <string name="challenge_form_txteChallengeName">Nombre del reto*</string>
    <string name="btnAccept">Aceptar</string>
    <string name="btnCancel">Cancelar</string>
    <string name="nav_challenge_creation">Crear reto</string>
    <string name="textRequired">*obligatorio</string>
    <string name="txtEmptyError">Rellenar campo</string>
    <string name="zero_value" translatable="false">0</string>
    <string name="msgDialog_createdEvent">Evento creado</string>
    <string name="search_location_error">Error en la búsqueda</string>
    <string name="location_not_selected">Ubicación no seleccionada</string>
    <string name="internet_connection_error">Error de conexión</string>
    <string name="event_form_txteEventEndDate_error">No puede ser anterior a la fecha de inicio</string>
    <string name="event_form_txteEventNGuests">Nº Participantes</string>
    <string name="ten_value" translatable="false">10</string>
    <string name="event_form_txteEventNGuests_error">Mínimo 10 personas</string>
    <string name="event_form_txteEventOrganizers">Nombres de organizadores*</string>
    <string name="unknown">Desconocido</string>
    <string name="btnAttendance">Unirse</string>
    <string name="menu_signOut">Cerrar sesión</string>
    <string name="user_form_txtName">\@nombre_usuario</string>
    <string name="user_form_txteEmail">ejemplo@gmail.com</string>
    <string name="user_form_txtUserBirthday">F. Nacimiento*</string>
    <string name="user_form_txtPassword">Contraseña*</string>
    <string name="user_form_txtGender">Género*</string>
    <string name="user_form_btnLogIn">Iniciar sesión</string>
    <string name="user_form_btnSignIn">Registrarse</string>
    <string name="user_form_txteEmail_error">Formato incorrecto</string>
    <string name="user_form_txtePsswrd_lowerCase_error">Debe haber al menos una letra minúscula</string>
    <string name="user_form_txtePsswrd_upperCase_error">Debe haber al menos una letra mayúscula</string>
    <string name="user_form_txtePsswrd_number_error">Debe haber al menos un número</string>
    <string name="user_form_txtePsswrd_specialChar_error">Debe haber al menos un carácter especial</string>
    <string name="user_form_txtePsswrd_length_error">Mínimo 8 caracteres</string>
    <string name="user_form_txteConfirmPsswrd_error">Las contraseñas no coinciden</string>
    <string name="user_form_txteUserBirthdate_error">No puedes ser menor de 15 años</string>
    <string name="server_error">Ha surgido un problema con el servidor</string>
    <string name="array_gender_male">Hombre</string>
    <string name="array_gender_female">Mujer</string>
    <string name="array_gender_other">Otro</string>
    <string name="user_form_txteName_error">Este nombre de usuario ya existe</string>
    <string name="signIn_existingEmail_err">Este correo ya está siendo utilizado</string>
    <string name="signIn_profilePhoto_error">La foto de perfil no ha sido posible guardarla</string>
    <string name="logIn_error">Usuario o contraseña incorrectos</string>
    <string name="logIn_profileDoc_error">Información corrupta en el servidor</string>
    <string name="logIn_profilePhoto_error">La foto de perfil no se ha podido cargar</string>
    <string name="menu_item_settings">Ajustes</string>
    <string name="user_form_txtConfPassword">Confirmar contraseña*</string>
    <string name="user_form_txtLocation">Ciudad*</string>
    <string name="btnAttendance_pressed">¡Unido!</string>
    <string name="icon_btnLikeEvent">Añadir a Favoritos</string>
</resources>