<!--
  ~ Copyright (c) 2024.
  ~ MyCity © 2024 by Pelayo Reguera García is licensed under
  ~ Attribution-NonCommercial-NoDerivatives 4.0 International.
  ~
  ~ To view a copy of this license, visit http://creativecommons.org/licenses/by-nc-nd/4.0/
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/fragment_events_explorer"
        android:icon="@drawable/ic_baseline_travel_explore_24"
        android:title="@string/nav_explore" />

    <item
        android:id="@+id/fragment_map"
        android:icon="@drawable/ic_baseline_map_24"
        android:title="@string/nav_map" />

    <item
        android:id="@+id/fragment_profile"
        android:icon="@drawable/ic_baseline_person_24"
        android:title="@string/nav_profile"/>

</menu>